# arcadEwE

./: .gitignore  .gitmodules  CMakeLists.txt  save.txt
.github/workflows/: SyncingTwoRepo.yml
lib/: libarcade_snake.so.1.0.0
lib/Snake/: Api.cpp  Snake.cpp  Snake.hpp  SnakeEntry.cpp
lib/Snake/Components/: Direction.cpp  Movements.cpp  Movements.hpp  Position.cpp  Speed.cpp  Speed.hpp
lib/Snake/Scenes/: SnakeGameScene.cpp  SnakeGameScene.hpp  SnakeMenuScene.cpp  SnakeMenuScene.hpp  SnakeScene.cpp  SnakeScene.hpp
lib/Snake/Systems/: MoveSnake.cpp  OnClickResume.cpp  OnClickResume.hpp  PlayerInputs.cpp  PlayerInputs.hpp  SnakeGameManager.cpp  SnakeGameManager.hpp
src/: AComponent.cpp  AComponent.hpp  Core.cpp  Core.hpp  DisplayHandler.cpp  DisplayHandler.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.cpp  Events.hpp  GameHandler.cpp  GameHandler.hpp  LibraryHandler.cpp  LibraryHandler.hpp  SystemManager.cpp  SystemManager.hpp  main.cpp
src/Core/: Clock.cpp  Clock.hpp  Core.cpp  Core.hpp  DisplayModule.cpp  DisplayModule.hpp  GameModule.cpp  GameModule.hpp
src/Core/MainMenu/: Api.cpp  CMakeLists.txt  MainMenu.cpp  MainMenu.hpp
src/Core/MainMenu/Components/: IsHovered.cpp  IsHovered.hpp  Music.cpp  Music.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  TextHitbox.cpp  TextHitbox.hpp
src/Core/MainMenu/Scene/: MainMenuScene.cpp  MainMenuScene.hpp  SaveReader.cpp  SaveReader.hpp  SelectionLib.cpp  SelectionLib.hpp
src/Core/MainMenu/Systems/: IsHovering.cpp  IsHovering.hpp  KeyboardEvent.cpp  KeyboardEvent.hpp  KeyboardHandler.cpp  KeyboardHandler.hpp  OnClickGameLib.cpp  OnClickGameLib.hpp  OnClickGraphLib.cpp  OnClickGraphLib.hpp
src/ECS/: AComponent.cpp  AComponent.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  EventManager.cpp  EventManager.hpp  SystemManager.cpp  SystemManager.hpp
src/Game/: AGameModule.cpp  AGameModule.hpp  AScene.cpp  AScene.hpp  Scene.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp
src/Game/Snake/: SnakeEntry.cpp  Systems.cpp  Systems.hpp
src/Game/Snake/Components/: Movements.cpp  Movements.hpp
src/Game/Snake/Systems/: OnClickResume.cpp
src/Game/libs/Nibbler/: Api.cpp  CMakeLists.txt  NibblerGameModule.cpp  NibblerGameModule.hpp  ObjectFactory.cpp  ObjectFactory.hpp
src/Game/libs/Nibbler/Components/: BoxCollider.cpp  BoxCollider.hpp  BufferText.cpp  BufferText.hpp  Direction.cpp  Direction.hpp  NibblerHeadCollider.cpp  NibblerHeadCollider.hpp  NibblerIsHovered.cpp  NibblerIsHovered.hpp  NibblerPath.cpp  NibblerPath.hpp  NibblerSprite.cpp  NibblerSprite.hpp  NibblerText.cpp  NibblerText.hpp  Speed.cpp  Speed.hpp  Transform.cpp  Transform.hpp
src/Game/libs/Nibbler/Scenes/: NibblerGameOverScene.cpp  NibblerGameOverScene.hpp  NibblerGameScene.cpp  NibblerGameScene.hpp  NibblerMenuScene.cpp  NibblerMenuScene.hpp  NibblerScene.cpp  NibblerScene.hpp
src/Game/libs/Nibbler/Systems/: BufferWriterManager.cpp  BufferWriterManager.hpp  ColliderManager.cpp  ColliderManager.hpp  FruitSpawner.cpp  FruitSpawner.hpp  MenuKeyboardHandler.cpp  MenuKeyboardHandler.hpp  MoveNibbler.cpp  MoveNibbler.hpp  MoveTail.cpp  MoveTail.hpp  NibblerGameManager.cpp  NibblerGameManager.hpp  NibblerIsHovering.cpp  NibblerIsHovering.hpp  NibblerTailManager.cpp  NibblerTailManager.hpp  PlayerInputs.cpp  PlayerInputs.hpp  TransformDisplay.cpp  TransformDisplay.hpp
src/Game/libs/Snake/: CMakeLists.txt  ObjectFactory.cpp  ObjectFactory.hpp  SnakeGameModule.cpp  SnakeGameModule.hpp
src/Game/libs/Snake/Components/: BoxCollider.cpp  BoxCollider.hpp  BufferText.cpp  BufferText.hpp  Direction.cpp  Direction.hpp  Position.hpp  SnakeHeadCollider.cpp  SnakeHeadCollider.hpp  SnakeIsHovered.cpp  SnakeIsHovered.hpp  SnakePath.cpp  SnakePath.hpp  SnakeSprite.cpp  SnakeSprite.hpp  SnakeText.cpp  SnakeText.hpp  Speed.cpp  Speed.hpp  Sprite.cpp  Sprite.hpp  Transform.cpp  Transform.hpp
src/Game/libs/Snake/Scenes/: SnakeGameOverScene.cpp  SnakeGameOverScene.hpp  SnakeGameScene.cpp  SnakeGameScene.hpp  SnakeMenuScene.cpp  SnakeMenuScene.hpp  SnakeScene.cpp  SnakeScene.hpp
src/Game/libs/Snake/Systems/: BufferWriterManager.cpp  BufferWriterManager.hpp  ColliderManager.cpp  ColliderManager.hpp  FruitSpawner.cpp  FruitSpawner.hpp  MenuKeyboardHandler.cpp  MenuKeyboardHandler.hpp  MoveSnake.cpp  MoveSnake.hpp  MoveTail.cpp  MoveTail.hpp  PlayerInputs.cpp  PlayerInputs.hpp  SnakeGameManager.cpp  SnakeGameManager.hpp  SnakeIsHovering.cpp  SnakeIsHovering.hpp  SnakeTailManager.cpp  SnakeTailManager.hpp  TransformDisplay.cpp  TransformDisplay.hpp
src/Game/libs/TestGame/: Api.cpp  CMakeLists.txt  TestGame.cpp  TestGame.hpp
src/Game/libs/TestGame/Scenes/: MainScene.cpp  MainScene.hpp
src/Graph/: Music.cpp  Music.hpp  Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp
src/Graph/Systems/NCurses/: NCursesSystem.cpp  NCursesSystem.hpp
src/Graph/Systems/SFML/: SFMLSystem.cpp  SFMLSystem.hpp
src/Graph/libs/NCurses/: Api.cpp  CMakeLists.txt  NCursesDisplayModule.cpp  NCursesDisplayModule.hpp
src/Graph/libs/NCurses/Handlers/: AHandler.cpp  AHandler.hpp  EventHandler.cpp  EventHandler.hpp  IHandler.hpp  SpriteHandler.cpp  SpriteHandler.hpp  TextHandler.cpp  TextHandler.hpp
src/Graph/libs/SDL/: Api.cpp  CMakeLists.txt  SdlDisplayModule.cpp  SdlDisplayModule.hpp  arcade_sdl2
src/Graph/libs/SDL/Systems/: OnEvent.cpp  OnEvent.hpp  SoundHandler.cpp  SoundHandler.hpp  SpriteDisplay.cpp  SpriteDisplay.hpp  TextHandler.cpp  TextHandler.hpp
src/Graph/libs/SFML/: Api.cpp  CMakeLists.txt  SFMLDisplayModule.cpp  SFMLDisplayModule.hpp  SFMLSystem.cpp  SFMLSystem.hpp
src/Graph/libs/SFML/Handlers/: EventHandler.cpp  EventHandler.hpp  MusicHandler.cpp  MusicHandler.hpp  SpriteHandler.cpp  SpriteHandler.hpp  TextHandler.cpp  TextHandler.hpp
